--- a/package.json
+++ b/package.json
@@ -1,7 +1,25 @@
 {
   "name": "rsschool-codejam",
   "version": "1.0.0",
+  "description": "",
+  "main": "test.js",
+  "scripts": {
+    "test": "mocha test.js"
+  },
   "dependencies": {
     
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Snowwe/rsschool-codejam.git"
+  },
+  "author": "snowwe",
+  "license": "ISC",
+  "bugs": {
+    "url": ""
+  },
+  "homepage": "https://github.com/Snowwe/rsschool-codejam#readme",
+  "devDependencies": {
+    "mocha": "^5.0.1"
   }
 }
