--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "test": "mocha test.js"
   },
-  "dependencies": {
-    
-  },
+  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Snowwe/rsschool-codejam.git"
@@ -20,6 +18,7 @@
   },
   "homepage": "https://github.com/Snowwe/rsschool-codejam#readme",
   "devDependencies": {
+    "eslint": "^5.8.0",
     "mocha": "^5.0.1"
   }
 }
